--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "tsc && vite build",
         "prepare": "husky install"
     },
+    "lint-staged": {
+        "**/*.php": "./vendor/bin/pint --preset laravel"
+    },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
@@ -19,6 +22,7 @@
         "axios": "^1.6.1",
         "husky": "^8.0.3",
         "laravel-vite-plugin": "^0.8.0",
+        "lint-staged": "^15.2.0",
         "postcss": "^8.4.18",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
