--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "spatie/laravel-permission": "^6.2",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
